@@ -3,26 +3,22 @@
  */
 package org.iplantc.service.jobs.managers;
 
-import java.math.BigDecimal;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ArrayNode;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import org.apache.commons.lang.StringUtils;
 import org.apache.commons.lang.math.NumberUtils;
 import org.iplantc.service.apps.exceptions.SoftwareException;
 import org.iplantc.service.apps.model.Software;
-import org.iplantc.service.apps.model.SoftwareInput;
 import org.iplantc.service.apps.model.SoftwareParameter;
 import org.iplantc.service.apps.model.enumerations.SoftwareParameterType;
 import org.iplantc.service.apps.util.ServiceUtils;
-import org.iplantc.service.common.exceptions.PermissionException;
+import org.iplantc.service.jobs.Settings;
 import org.iplantc.service.jobs.exceptions.JobProcessingException;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.fasterxml.jackson.databind.node.ObjectNode;
+import java.math.BigDecimal;
+import java.util.List;
+import java.util.Map;
 
 /**
  * @author dooley
@@ -30,7 +26,7 @@ import com.fasterxml.jackson.databind.node.ObjectNode;
  */
 public class JobRequestParameterProcessor {
 
-	private ObjectNode jobParameters;
+	protected ObjectNode jobParameters;
 	private ObjectMapper mapper;
 	private Software software;
 	
@@ -39,18 +35,16 @@ public class JobRequestParameterProcessor {
 		this.setMapper(new ObjectMapper());
 	}
 	/**
-	 * Validates the {@link SoftwareParameter} values passed into
-	 * a job request.
-	 * @param software
-	 * @param jobRequestMap
-	 * @throws JobProcessingException
+	 * Validates the {@link SoftwareParameter} values passed into a job request.
+	 * @param jobRequestMap the map of parameter values submitted with the job request
+	 * @throws JobProcessingException if an invalid value is provided
 	 */
 	public void process(Map<String, Object> jobRequestMap) 
 	throws JobProcessingException {
 		
-		this.jobParameters = getMapper().createObjectNode();
-		
-		for (SoftwareParameter softwareParameter : software.getParameters())
+		setJobParameters(getMapper().createObjectNode());
+
+		for (SoftwareParameter softwareParameter : getSoftware().getParameters())
 		{
 			ArrayNode validatedJobParamValueArray = getMapper().createArrayNode();
 
@@ -68,12 +62,12 @@ public class JobRequestParameterProcessor {
 					} else if (softwareParameter.getType().equals(SoftwareParameterType.bool) ||
 							softwareParameter.getType().equals(SoftwareParameterType.flag)) {
 						if (softwareParameter.getDefaultValueAsJsonArray().size() > 0) {
-							jobParameters.put(softwareParameter.getKey(), softwareParameter.getDefaultValueAsJsonArray().get(0));
+							getJobParameters().set(softwareParameter.getKey(), softwareParameter.getDefaultValueAsJsonArray().get(0));
 						} else {
-							jobParameters.put(softwareParameter.getKey(), false);
+							getJobParameters().put(softwareParameter.getKey(), false);
 						}
 					} else {
-						jobParameters.put(softwareParameter.getKey(), softwareParameter.getDefaultValueAsJsonArray());
+						getJobParameters().set(softwareParameter.getKey(), softwareParameter.getDefaultValueAsJsonArray());
 					}
 				}
 				else if (!jobRequestMap.containsKey(softwareParameter.getKey()))
@@ -91,15 +85,37 @@ public class JobRequestParameterProcessor {
 				else
 				{
 					String[] explodedParameters = null;
-					if (jobRequestMap.get(softwareParameter.getKey()) == null) {
-//						explodedParameters = new String[]{};
-						continue;
+				 	if (jobRequestMap.get(softwareParameter.getKey()) == null) {
+				 		continue;
 					} else if (jobRequestMap.get(softwareParameter.getKey()) instanceof String[]) {
-						explodedParameters = (String[])jobRequestMap.get(softwareParameter.getKey());
-
+						// arrays are kept in tact as is null values will be pruned later
+				 		explodedParameters = (String[])jobRequestMap.get(softwareParameter.getKey());
+					} else if (jobRequestMap.get(softwareParameter.getKey()) instanceof String) {
+						String stringVal = (String)jobRequestMap.get(softwareParameter.getKey());
+						if (StringUtils.isBlank(stringVal)) {
+							// blank values would be ignored when splitting, so we check for them first and preserve them
+							// as a single value array
+							explodedParameters = new String[]{(String) jobRequestMap.get(softwareParameter.getKey())};
+						} else if (stringVal.contains(Settings.AGAVE_SERIALIZED_LIST_DELIMITER)) {
+							// If the job is submitted via a form and the parameter is provided via a single, semicolon
+							// separated list, then the actual parameter values cannot contain a semicolon, which is
+							// undesirable given that the wrapper scripts are run as shell scripts and the parameter
+							// value may legitimately need to include a semicolon.
+							// We can't solve this in every situation, so we work around it when we can, which is when
+							// the job request is made via JSON. In that case, each value of the parameter's JSON array
+							// is parsed, replacing all instances of a semicolon with a random 128 character, base64
+							// encoded delimiter generated when the server starts up. Here, we search for the delimiter
+							// and, if found, split the concatenated input values on that value, thereby allowing for
+							// the preservation of semicolons in the user's original parameter value.
+							explodedParameters = StringUtils.splitByWholeSeparatorPreserveAllTokens(stringVal, Settings.AGAVE_SERIALIZED_LIST_DELIMITER);
+						} else {
+							// Unfortunately, we cannot reliably do this for single value form requests, so in those
+							// situations, we preserve the original value and fall back to the documented behavior of
+							// splitting on semicolon.
+						 	explodedParameters = StringUtils.splitByWholeSeparatorPreserveAllTokens(stringVal, ";");
+						}
 					} else {
-						explodedParameters = StringUtils.split((String)jobRequestMap.get(softwareParameter.getKey()), ";");
-//						explodedParameters = new String[]{(String)pTable.get(softwareParameter.getKey())};
+						explodedParameters = new String[] { String.valueOf(jobRequestMap.get(softwareParameter.getKey())) };
 					}
 
 					if (softwareParameter.getMinCardinality() > explodedParameters.length)
@@ -128,10 +144,15 @@ public class JobRequestParameterProcessor {
 
 						if (validParamValues.isEmpty())
 						{
-							throw new JobProcessingException(400,
-									"Invalid parameter value for " + softwareParameter.getKey() +
-									". Value must be one of: " + ServiceUtils.explode(",  ", validParamValues));
+							if (explodedParameters.length == 0) {
+								continue;
+							} else {
+								throw new JobProcessingException(400,
+										"No enumeration value defined for " + softwareParameter.getKey() +
+												". Input parameter value may only be empty.");
+							}
 						}
+						// this should not be possible
 						else if (explodedParameters.length == 0) {
 							continue;
 						}
@@ -139,10 +160,18 @@ public class JobRequestParameterProcessor {
 						{
 							for (String jobParam: explodedParameters)
 							{
+								// skip null values. Since enums are strings, they can legitimately be blank or
+								// padded and still be valid values, thus we do not trim before making the null check.
+								if (jobParam == null) {
+									continue;
+								}
+
 								if (validParamValues.contains(jobParam))
 								{
 									if (explodedParameters.length == 1) {
-										jobParameters.put(softwareParameter.getKey(), jobParam);
+										// TODO: why are we sometimes putting an array and sometimes a single value? Is this
+										//   so we can retain the actual structure of the request?
+										getJobParameters().put(softwareParameter.getKey(), jobParam);
 									} else {
 										validatedJobParamValueArray.add(jobParam);
 									}
@@ -150,13 +179,13 @@ public class JobRequestParameterProcessor {
 								else
 								{
 									throw new JobProcessingException(400,
-											"Invalid parameter value, " + jobParam + ", for " + softwareParameter.getKey() +
+											"Invalid parameter value, '" + jobParam + "', for " + softwareParameter.getKey() +
 											". Value must be one of: " + ServiceUtils.explode(",  ", validParamValues));
 								}
 							}
 
 							if (validatedJobParamValueArray.size() > 1) {
-								jobParameters.put(softwareParameter.getKey(), validatedJobParamValueArray);
+								getJobParameters().set(softwareParameter.getKey(), validatedJobParamValueArray);
 							}
 						}
 					}
@@ -169,34 +198,50 @@ public class JobRequestParameterProcessor {
 									"Invalid parameter value for " + softwareParameter.getKey() +
 									". Boolean and flag parameters do not support multiple values.");
 						}
+						// this should not be possible
 						else if (explodedParameters.length == 0) {
+							// ignore empty arrays. This represents no value passed in by the user, so we skip adding
+							// this to the resulting job parameter object and carry on.
 							continue;
 						}
 						else
 						{
-							String inputValue = explodedParameters[0];
-							if (inputValue.toString().equalsIgnoreCase("true")
-									|| inputValue.toString().equals("1")
-									|| inputValue.toString().equalsIgnoreCase("on"))
-							{
-								jobParameters.put(softwareParameter.getKey(), true);
+							// trim the param since whitespace will break the truthy check
+							String paramValue = StringUtils.stripToEmpty(explodedParameters[0]);
+							if (StringUtils.isBlank(paramValue)) {
+								// ignore empty values for flag and boolean values because they only accept truthy
+								// values. Empty strings and null values get filtered to blank in the previous stanza,
+								// and represent no value passed in by the user, so we skip adding this to the resulting
+								// job parameter object and carry on.
+								continue;
 							}
-							else if (inputValue.toString().equalsIgnoreCase("false")
-									|| inputValue.toString().equals("0")
-									|| inputValue.toString().equalsIgnoreCase("off"))
+							else if (paramValue.toString().equalsIgnoreCase("true")
+									|| paramValue.toString().equals("1")
+									|| paramValue.toString().equalsIgnoreCase("on"))
 							{
-								jobParameters.put(softwareParameter.getKey(), false);
+								// case insensitive values of true, on, and 1 are truthy values.
+								getJobParameters().put(softwareParameter.getKey(), true);
+							}
+							else if (paramValue.toString().equalsIgnoreCase("false")
+									|| paramValue.toString().equals("0")
+									|| paramValue.toString().equalsIgnoreCase("off"))
+							{
+								// case insensitive values of false, off, and 0 are falsy values.
+								getJobParameters().put(softwareParameter.getKey(), false);
 							}
 							else
 							{
+								// anything else gets rejected
 								throw new JobProcessingException(400,
 										"Invalid parameter value for " + softwareParameter.getKey() +
-										". Value must be a boolean value. Use 1,0 or true/false as available values.");
+											". Value " + paramValue + " must be a case-insensitive truthy value. 1, on, or true " +
+											"evaluate to true. 0, off, and false evaluate to false.");
 							}
 						}
 					}
 					else if (softwareParameter.getType().equals(SoftwareParameterType.number))
 					{
+						// this should not be possible
 						if (explodedParameters.length == 0) {
 							continue;
 						}
@@ -204,20 +249,27 @@ public class JobRequestParameterProcessor {
 						{
 							for (String jobParam: explodedParameters)
 							{
+								// trim the param since whitespace will break the numeric check
+								jobParam = StringUtils.stripToEmpty(jobParam);
+								// skip null and blank values
+								if (StringUtils.isEmpty(jobParam)) {
+									continue;
+								}
+
 								try
 								{
 									if (NumberUtils.isDigits(jobParam))
 									{
 										if (ServiceUtils.doesValueMatchValidatorRegex(jobParam, softwareParameter.getValidator())) {
 											if (explodedParameters.length == 1) {
-												jobParameters.put(softwareParameter.getKey(), new Long(jobParam));
+												getJobParameters().put(softwareParameter.getKey(), Long.valueOf(jobParam));
 											} else {
-												validatedJobParamValueArray.add(new Long(jobParam));
+												validatedJobParamValueArray.add(Long.valueOf(jobParam));
 											}
 										} else {
 											throw new JobProcessingException(400,
 													"Invalid parameter value for " + softwareParameter.getKey() +
-													". Value must match the regular expression " +
+													". Value '" + jobParam + "' must match the regular expression " +
 													softwareParameter.getValidator());
 										}
 
@@ -226,63 +278,61 @@ public class JobRequestParameterProcessor {
 									{
 										if (ServiceUtils.doesValueMatchValidatorRegex(jobParam, softwareParameter.getValidator())) {
 											if (explodedParameters.length == 1) {
-												jobParameters.put(softwareParameter.getKey(), new BigDecimal(jobParam).toPlainString());
+												getJobParameters().put(softwareParameter.getKey(), new BigDecimal(jobParam).toPlainString());
 											} else {
 												validatedJobParamValueArray.add(new BigDecimal(jobParam).toPlainString());
 											}
-
 										} else {
 											throw new JobProcessingException(400,
 													"Invalid parameter value for " + softwareParameter.getKey() +
-													". Value must match the regular expression " +
+													". Value '" + jobParam + "' must match the regular expression " +
 													softwareParameter.getValidator());
 										}
+									}
+									else {
+										throw new JobProcessingException(400,
+												"Invalid parameter value for " + softwareParameter.getKey() +
+														". Value '" + jobParam + "' must be a number.");
 									}
 								} catch (NumberFormatException e) {
 									throw new JobProcessingException(400,
 											"Invalid parameter value for " + softwareParameter.getKey() +
-											". Value must be a number.");
+											". Value '" + jobParam + "' must be a number.");
 								}
 							}
 
 							if (validatedJobParamValueArray.size() > 1) {
-								jobParameters.put(softwareParameter.getKey(), validatedJobParamValueArray);
+								getJobParameters().set(softwareParameter.getKey(), validatedJobParamValueArray);
 							}
 						}
 					}
 					else // string parameter
 					{
+						// this should not be possible
 						if (explodedParameters.length == 0) {
 							continue;
 						}
 						else
 						{
-							for (String jobParam: explodedParameters)
-							{
-								if (jobParam == null)
-								{
+							for (String jobParam: explodedParameters) {
+								if (jobParam == null) {
 									continue;
-								}
-								else
-								{
-									if (ServiceUtils.doesValueMatchValidatorRegex(jobParam, softwareParameter.getValidator()))
-									{
+								} else {
+									if (ServiceUtils.doesValueMatchValidatorRegex(jobParam, softwareParameter.getValidator())) {
 										validatedJobParamValueArray.add(jobParam);
-									}
-									else
-									{
+									} else {
 										throw new JobProcessingException(400,
 												"Invalid parameter value for " + softwareParameter.getKey() +
-												". Value must match the regular expression " +
+												". Value '" + jobParam + "' must match the regular expression " +
 												softwareParameter.getValidator());
 									}
 								}
 							}
 
 							if (validatedJobParamValueArray.size() == 1) {
-								jobParameters.put(softwareParameter.getKey(), validatedJobParamValueArray.iterator().next().asText());
+								getJobParameters().put(softwareParameter.getKey(), validatedJobParamValueArray.iterator().next().asText());
 							} else {
-								jobParameters.put(softwareParameter.getKey(), validatedJobParamValueArray);
+								getJobParameters().set(softwareParameter.getKey(), validatedJobParamValueArray);
 							}
 						}
 					}
@@ -291,397 +341,13 @@ public class JobRequestParameterProcessor {
 			catch (JobProcessingException e) {
 				throw e;
 			}
-			catch (Exception e)
-			{
+			catch (Exception e) {
 				throw new JobProcessingException(500,
 						"Failed to parse parameter "+ softwareParameter.getKey(), e);
 			}
 		}
 	}
-//		// Verify the parameters by their keys given in the
-//		// SoftwareParameter in the Software object.
-//		this.jobParameters = mapper.createObjectNode();
-//		
-//		for (SoftwareParameter softwareParameter : software.getParameters())
-//		{
-////			ArrayNode jobRequestParamValue = null;
-//			
-//			doProcessSoftwareParameterValue(softwareParameter, 
-//					jobRequestMap.get(softwareParameter.getKey()));
-//			
-//			try
-//			{
-//				// add hidden parameters into the input array so we have a full record
-//				// of all parameters for this job in the history.
-//				if (!softwareParameter.isVisible())
-//				{
-//					// hidden fields are required
-//					if (jobRequestMap.containsKey(softwareParameter.getKey())) {
-//						throw new JobProcessingException(400,
-//								"Invalid hidden parameter value for " + softwareParameter.getKey() +
-//								". " + softwareParameter.getKey() + " is a fixed value that "
-//								+ "cannot be set manually. Pleaes contact the app owner to fix the "
-//								+ "app definition.");
-//					} 
-//					// validate the default value to ensure it's still valid
-//					else if (softwareParameter.getType().equals(SoftwareParameterType.bool) ||
-//							softwareParameter.getType().equals(SoftwareParameterType.flag)) {
-//						
-//						// process just the first value. doesn't make sense to do anyting else.
-//						if (softwareParameter.getDefaultValueAsJsonArray().size() > 0) {
-//							boolean defaultValue = doProcessSingleValue(softwareParameter, (boolean)softwareParameter.getDefaultValueAsJsonArray().get(0));
-//							jobParameters.put(softwareParameter.getKey(), defaultValue);
-//						} 
-//						// no default, set false
-//						else {
-//							jobParameters.put(softwareParameter.getKey(), false);
-//						}
-//					} else {
-//						ArrayNode defaultValue = doProcessSingleValue(softwareParameter, softwareParameter.getDefaultValueAsJsonArray());
-//						jobParameters.put(softwareParameter.getKey(), defaultValue);
-//					}
-//				}
-//				// missing fields could be completely optional
-//				else if (!jobRequestMap.containsKey(softwareParameter.getKey()))
-//				{
-//					if (softwareParameter.isRequired()) {
-//						throw new JobProcessingException(400,
-//								"No input parameter specified for required parameter " 
-//								+ softwareParameter.getKey());
-//					}
-//					else {
-//						continue;
-//					}
-//				}
-//				else
-//				{	
-//					ArrayNode validatedValueArray = doProcessSingleValue(softwareParameter, jobRequestMap.get(softwareParameter.getKey());
-//					jobParameters.put(softwareParameter.getKey(), validatedValueArray);
-//				}
-//			}
-//		}
-//		
-//		/**
-//		 * Processes a single value provided for a {@link SoftwareParameter} field in a 
-//		 * job request 
-//		 * @param softwareParameter
-//		 * @param value a single parameter value
-//		 * @return
-//		 * @throws PermissionException
-//		 */
-//		protected ArrayNode doProcessSoftwareParameterValue(SoftwareParameter softwareParameter, Object value) 
-//		throws PermissionException, JobProcessingException
-//		{
-//			if (value != null) {
-//				if (value instanceof String) {
-//					return doProcessSoftwareParameterValue(softwareParameter, (String)value);
-//				}
-//				else if (value instanceof String[]) {
-//					return doProcessSoftwareParameterValue(softwareParameter, (String)value);
-//				}
-//				else if (value instanceof ArrayNode) {
-//					return doProcessSoftwareParameterValue(softwareParameter, (ArrayNode)value);
-//				}
-//				else {
-//					throw new JobProcessingException(400,
-//							"Unsupported parameter type for input " + softwareParameter.getKey());
-//				}
-//			}
-//			else {
-//				return doProcessSoftwareParameterValue(softwareParameter, this.mapper.createArrayNode());
-//			}
-//			
-//		}
-//		
-//		/**
-//		 * Processes a single value provided for a {@link SoftwareParameter} field in a 
-//		 * job request 
-//		 * @param softwareParameter
-//		 * @param value a single serialized parameter value
-//		 * @return
-//		 * @throws PermissionException
-//		 */
-//		protected ArrayNode doProcessSoftwareParameterValue(SoftwareParameter softwareParameter, String value) 
-//		throws PermissionException, JobProcessingException
-//		{
-//			ArrayNode jobRequestParameterValue = this.mapper.createArrayNode();
-//			
-//			if (value != null) {
-//				for (String token: StringUtils.split(value, ";")) {
-//					jobRequestParameterValue.add(token);
-//				}
-//			}
-//			
-//			return doProcessSoftwareParameterValue(softwareParameter, jobRequestParameterValue);
-//			
-//		}
-//			
-//		/**
-//		 * Processes a single value provided for a {@link SoftwareParameter} field in a 
-//		 * job request 
-//		 * @param softwareParameter
-//		 * @param value a single serialized parameter value
-//		 * @return
-//		 * @throws PermissionException
-//		 */
-//		protected ArrayNode doProcessSoftwareParameterValue(SoftwareParameter softwareParameter, String[] values) 
-//		throws PermissionException, JobProcessingException
-//		{
-//			ArrayNode jobRequestParameterValue = this.mapper.createArrayNode();
-//			
-//			if (values != null) {
-//				for (String value: values) {
-//					for (String token: StringUtils.split(value, ";")) {
-//						jobRequestParameterValue.add(token);
-//					}
-//				}
-//			}
-//			
-//			return doProcessSoftwareParameterValue(softwareParameter, jobRequestParameterValue);
-//		}
-//		
-//		/**
-//		 * Processes a single value provided for a {@link SoftwareParameter} field in a 
-//		 * job request 
-//		 * @param softwareInput
-//		 * @param valueArray an JSON {@link ArrayNode} of single input string values
-//		 * @return
-//		 * @throws PermissionException
-//		 */
-//		protected ArrayNode doProcessSoftwareParameterValue(SoftwareParameter softwareParameter, ArrayNode valueArray) 
-//		throws PermissionException, JobProcessingException
-//		{	
-//			ArrayNode jobRequestParameterValue = mapper.createArrayNode();
-//			
-//			if (softwareParameter.getMinCardinality() > valueArray.size())
-//			{
-//				throw new JobProcessingException(400,
-//						softwareParameter.getKey() + " requires at least " +
-//								softwareParameter.getMinCardinality() + " values");
-//			}
-//			else if (softwareParameter.getMaxCardinality() != -1 &&
-//				softwareParameter.getMaxCardinality() < valueArray.size())
-//			{
-//				throw new JobProcessingException(400,
-//						softwareParameter.getKey() + " may have at most " +
-//						softwareParameter.getMaxCardinality() + " values");
-//			}
-//			else if (softwareParameter.getType().equals(SoftwareParameterType.enumeration))
-//			{
-//				List<String> validParamValues = null;
-//				try {
-//					validParamValues = softwareParameter.getEnumeratedValuesAsList();
-//				} catch (SoftwareException e) {
-//					throw new JobProcessingException(400,
-//							"Unable to validate parameter value for " + softwareParameter.getKey() +
-//							" against the enumerated values defined for this parameter.", e);
-//				}
-//
-//				if (validParamValues.isEmpty()) {
-//					throw new JobProcessingException(400,
-//							"Invalid parameter value for " + softwareParameter.getKey() +
-//							". No valid enumerated values are defined for this app");
-//				}
-//				else if (valueArray.size() == 0) {
-//					continue;
-//				}
-//				else {
-//					
-//					for (Iterator<JsonNode> iter = valueArray.iterator(); iter.hasNext(); ) {
-//						JsonNode json = iter.next();
-//						
-//						// only string values are supported
-//						if (!json.isValueNode()) {
-//							throw new JobProcessingException(400,
-//									"Invalid parameter value, "
-//									+ json.toString()
-//									+ ", for "
-//									+ softwareParameter.getKey()
-//									+ ". Value must be a string value representing "
-//									+ "a file or folder for which you have access.");
-//						}
-//						// ignore empty values. default values are not autofilled by agave.
-//						// users must supply them on their own. The long exception being
-//						// when a SoftwareInput is not visible. In that situation, the 
-//						// default value is always injected into the job request and
-//						// already present here.
-//						else if (json.isNull()) {
-//							continue;
-//						}
-//						
-//						String sValue = doProcessSingleValue(softwareParameter, json);
-//						
-//						jobRequestParameterValue.add(sValue);
-//						
-//					for (String jobParam: explodedParameters)
-//					{
-//						if (validParamValues.contains(jobParam))
-//						{
-//							if (explodedParameters.length == 1) {
-//								jobParameters.put(softwareParameter.getKey(), jobParam);
-//							} else {
-//								validatedJobParamValueArray.add(jobParam);
-//							}
-//						}
-//						else
-//						{
-//							throw new JobProcessingException(400,
-//									"Invalid parameter value, " + jobParam + ", for " + softwareParameter.getKey() +
-//									". Value must be one of: " + ServiceUtils.explode(",  ", validParamValues));
-//						}
-//					}
-//
-//					if (validatedJobParamValueArray.size() > 1) {
-//						jobParameters.put(softwareParameter.getKey(), validatedJobParamValueArray);
-//					}
-//				}
-//			}
-//			else if (softwareParameter.getType().equals(SoftwareParameterType.bool) ||
-//					softwareParameter.getType().equals(SoftwareParameterType.flag))
-//			{
-//				if (explodedParameters.length > 1)
-//				{
-//					throw new JobProcessingException(400,
-//							"Invalid parameter value for " + softwareParameter.getKey() +
-//							". Boolean and flag parameters do not support multiple values.");
-//				}
-//				else if (explodedParameters.length == 0) {
-//					continue;
-//				}
-//				else
-//				{
-//					String inputValue = explodedParameters[0];
-//					if (inputValue.toString().equalsIgnoreCase("true")
-//							|| inputValue.toString().equals("1")
-//							|| inputValue.toString().equalsIgnoreCase("on"))
-//					{
-//						jobParameters.put(softwareParameter.getKey(), true);
-//					}
-//					else if (inputValue.toString().equalsIgnoreCase("false")
-//							|| inputValue.toString().equals("0")
-//							|| inputValue.toString().equalsIgnoreCase("off"))
-//					{
-//						jobParameters.put(softwareParameter.getKey(), false);
-//					}
-//					else
-//					{
-//						throw new JobProcessingException(400,
-//								"Invalid parameter value for " + softwareParameter.getKey() +
-//								". Value must be a boolean value. Use 1,0 or true/false as available values.");
-//					}
-//				}
-//			}
-//			else if (softwareParameter.getType().equals(SoftwareParameterType.number))
-//			{
-//				if (explodedParameters.length == 0) {
-//					continue;
-//				}
-//				else
-//				{
-//					for (String jobParam: explodedParameters)
-//					{
-//						try
-//						{
-//							if (NumberUtils.isDigits(jobParam))
-//							{
-//								if (ServiceUtils.doesValueMatchValidatorRegex(jobParam, softwareParameter.getValidator())) {
-//									if (explodedParameters.length == 1) {
-//										jobParameters.put(softwareParameter.getKey(), new Long(jobParam));
-//									} else {
-//										validatedJobParamValueArray.add(new Long(jobParam));
-//									}
-//								} else {
-//									throw new JobProcessingException(400,
-//											"Invalid parameter value for " + softwareParameter.getKey() +
-//											". Value must match the regular expression " +
-//											softwareParameter.getValidator());
-//								}
-//
-//							}
-//							else if (NumberUtils.isNumber(jobParam))
-//							{
-//								if (ServiceUtils.doesValueMatchValidatorRegex(jobParam, softwareParameter.getValidator())) {
-//									if (explodedParameters.length == 1) {
-//										jobParameters.put(softwareParameter.getKey(), new BigDecimal(jobParam).toPlainString());
-//									} else {
-//										validatedJobParamValueArray.add(new BigDecimal(jobParam).toPlainString());
-//									}
-//
-//								} else {
-//									throw new JobProcessingException(400,
-//											"Invalid parameter value for " + softwareParameter.getKey() +
-//											". Value must match the regular expression " +
-//											softwareParameter.getValidator());
-//								}
-//							}
-//						} catch (NumberFormatException e) {
-//							throw new JobProcessingException(400,
-//									"Invalid parameter value for " + softwareParameter.getKey() +
-//									". Value must be a number.");
-//						}
-//					}
-//
-//					if (validatedJobParamValueArray.size() > 1) {
-//						jobParameters.put(softwareParameter.getKey(), validatedJobParamValueArray);
-//					}
-//				}
-//			}
-//			else // string parameter
-//			{
-//				if (explodedParameters.length == 0) {
-//					continue;
-//				}
-//				else
-//				{
-//					for (String jobParam: explodedParameters)
-//					{
-//						if (jobParam == null)
-//						{
-//							continue;
-//						}
-//						else
-//						{
-//							if (ServiceUtils.doesValueMatchValidatorRegex(jobParam, softwareParameter.getValidator()))
-//							{
-//								validatedJobParamValueArray.add(jobParam);
-//							}
-//							else
-//							{
-//								throw new JobProcessingException(400,
-//										"Invalid parameter value for " + softwareParameter.getKey() +
-//										". Value must match the regular expression " +
-//										softwareParameter.getValidator());
-//							}
-//						}
-//					}
-//
-//					if (validatedJobParamValueArray.size() == 1) {
-//						jobParameters.put(softwareParameter.getKey(), validatedJobParamValueArray.iterator().next().asText());
-//					} else {
-//						jobParameters.put(softwareParameter.getKey(), validatedJobParamValueArray);
-//					}
-//				}
-//			}
-//		}
-//	}
-//	catch (JobProcessingException e) {
-//		throw e;
-//	}
-//	catch (Exception e)
-//	{
-//		throw new JobProcessingException(500,
-//				"Failed to parse parameter "+ softwareParameter.getKey(), e);
-//	}
-//}
-//
-//	private boolean doProcessSingleValue(SoftwareParameter softwareParameter,
-//			boolean b) {
-//		// TODO Auto-generated method stub
-//		return false;
-//	}
-//
-//	}
-//
+
 	/**
 	 * @return the jobParameters
 	 */
